Initial implementation of custom post-types for front-end. Lots of UI bugs squashed (h2 line added, add/edit boxes sorting correctly now, maintaining closed/open/positions, correct default layout set, weight unit displayed properly on manage page, modified WP_Query for front end to sort by price correctly.).
git-svn-id: http://plugins.svn.wordpress.org/wp-e-commerce@253152 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/branches/3.8-development/wpsc-admin/css/admin.css
+++ b/branches/3.8-development/wpsc-admin/css/admin.css
@@ -1464,3 +1464,6 @@ a.variation_handle {
 #media-buttons #add_media {
 	display:none;
 } 
+.meta-box-sortables-wpec .postbox:hover .handlediv {
+background: transparent url(menu-bits.gif) no-repeat scroll 0% -111px;
+}
